--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Actuellement en Master Informatique (Bac+4) à Lyon, et joueur actif depuis ma plus tendre enfance. Je suis passionné par la programmation et le graphisme et réalise aujourd'hui des prototypes de jeux pour apprendre à utiliser les moteurs les plus appréciés du secteur vidéoludique (Unreal Engine 4/Unity) et à développer pour les langages C++ et C#.</p>
+                    <p>De formation Master Informatique spécialité Image Bac+4) à Lyon, et joueur actif depuis ma plus tendre enfance. Je suis passionné par la programmation et le graphisme et réalise aujourd'hui des prototypes de jeux pour apprendre à utiliser les moteurs les plus appréciés du secteur vidéoludique (Unity/Unreal Engine 4) et à développer pour les langages C# et C++.</p>
                 </div>
                 <div class="col-lg-4">
                      <p>Je me documente aussi régulièrement sur les nouveautés (techniques et actualités) dans ce domaine.</p>
@@ -199,21 +199,23 @@
                                 </li>
 
                                 <li data-type="web" class="is-hidden">
-                                    <header class="cd-pricing-header">
+                                 
+									<header class="cd-pricing-header">
                                         <h2>Moteurs</h2>
-                                        <span class="cd-value">Unity3D</span>
+                                        <span class="cd-value">Unreal Engine 4</span>
                                     </header> <!-- .cd-pricing-header -->
 
                                     <div class="cd-pricing-body">
                                         <ul class="cd-pricing-features">
-                                            <li><em>Niveau :</em> bon</li>
+                                            <li><em>Niveau :</em> Intermédiaire</li>
                                             <li><em>Projets :</em></li>
-                                            <li>Prototypes de Gameplay (C#)</li>
-                                            <li>Platformer 2D</li>
-                                            <li><a href="http://globalgamejam.org/2017/games/side-tricks-pedal-train" target="_blank">Global Game Jam 2017 - Side Tricks</a></li>
+                                            <li>Prototypes de Gameplay (C++ & Blueprints)</li>
+                                            <li><a href="https://github.com/Batora07/hackingGameNier" target="_blank">Mini jeu de piratage (NieR Automata)</a></li>
+                                            <li>-</li>
                                             <li>-</li>
                                         </ul>
                                     </div> <!-- .cd-pricing-body -->
+
                                 </li>
 
                                 <!--<li data-type="autre" class="is-hidden">
@@ -251,35 +253,35 @@
                                     <div class="cd-pricing-body">
                                         <ul class="cd-pricing-features">
                                             <li><em>Niveau :</em> intermédiaire</li>
-                                            <li><em>Projets :</em></li>
+											<li><em>Projets :</em></li>
+											<li><a href="https://github.com/Batora07/HackNSlashCyborg" target="_blank">Cyborg Hack'n Slash en 2D réalisé avec la lib SDL</a></li>
                                             <li>L3 - Roborally</li>
                                             <li>M1 - Cloth Anim 3D</li>
-                                            <li>-</li>
                                             <li>-</li>
                                         </ul>
                                     </div> <!-- .cd-pricing-body -->
 
+								<header class="cd-pricing-header">
+                                        <h2>Moteurs</h2>
+                                        <span class="cd-value">Unity3D</span>
+                                    </header> <!-- .cd-pricing-header -->
+									
+									<div class="cd-pricing-body">
+                                        <ul class="cd-pricing-features">
+                                            <li><em>Niveau :</em> bon</li>
+                                            <li><em>Projets :</em></li>
+                                            <li>Prototypes de Gameplay (C#)</li>
+                                            <li><a href="https://bit.ly/2MxFHI9" target="_blank">Prototype de RPG 3D (en cours de création)</a></li>
+                                            <li><a href="http://globalgamejam.org/2017/games/side-tricks-pedal-train" target="_blank">Global Game Jam 2017 - Side Tricks</a></li>
+                                            <li><a href="https://bit.ly/2Tda35b" target="_blank">Guild Up - j'ai participé au gameplay de ce serious Game utilisé comme plateforme d'e-learning par Orange/BNP Paribas, etc...</a></li>
+                                        </ul>
+                                    </div> <!-- .cd-pricing-body -->
                                     <footer class="cd-pricing-footer">
                                         <a class="cd-select" href="#portfolio">Portfolio</a>
                                     </footer>  <!-- .cd-pricing-footer -->
                                 </li>
 
                                 <li data-type="web" class="is-hidden">
-                                    <header class="cd-pricing-header">
-                                        <h2>Moteurs</h2>
-                                        <span class="cd-value">Unreal Engine 4</span>
-                                    </header> <!-- .cd-pricing-header -->
-
-                                    <div class="cd-pricing-body">
-                                        <ul class="cd-pricing-features">
-                                            <li><em>Niveau :</em> Intermédiaire</li>
-                                            <li><em>Projets :</em></li>
-                                            <li>Prototypes de Gameplay (C++ & Blueprints)</li>
-                                            <li><a href="https://github.com/Batora07/hackingGameNier" target="_blank">Mini jeu de piratage (NieR Automata)</a></li>
-                                            <li>-</li>
-                                            <li>-</li>
-                                        </ul>
-                                    </div> <!-- .cd-pricing-body -->
 
                                     <footer class="cd-pricing-footer">
                                         <a class="cd-select" href="#portfolio">Portfolio</a>
