--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>De formation Master Informatique spécialité Image Bac+4) à Lyon, et joueur actif depuis ma plus tendre enfance. Je suis passionné par la programmation et le graphisme et réalise aujourd'hui des prototypes de jeux pour apprendre à utiliser les moteurs les plus appréciés du secteur vidéoludique (Unity/Unreal Engine 4) et à développer pour les langages C# et C++.</p>
+                    <p>De formation Master Informatique spécialité Image (Bac+4) à Lyon, et joueur actif depuis ma plus tendre enfance. Je suis passionné par la programmation et le graphisme et réalise aujourd'hui des prototypes de jeux pour apprendre à utiliser les moteurs les plus appréciés du secteur vidéoludique (Unity/Unreal Engine 4) et à développer pour les langages C# et C++.</p>
                 </div>
                 <div class="col-lg-4">
-                     <p>Je me documente aussi régulièrement sur les nouveautés (techniques et actualités) dans ce domaine.</p>
+                     <p>Je me documente aussi régulièrement sur les nouveautés (techniques et actualités) dans ce domaine. Les shaders, l'IA et la programmation de moteurs de jeux me passionnent également.</p>
                 </div>     
             </div>
             <!-- /.row -->
@@ -272,14 +272,9 @@
                                             <li><em>Projets :</em></li>
                                             <li>Prototypes de Gameplay (C#)</li>
                                             <li><a href="https://bit.ly/2MxFHI9" target="_blank">Prototype de RPG 3D (en cours de création)</a></li>
+											<li><a href="https://bit.ly/2Tda35b" target="_blank">Guild Up - plateforme d'e-learning utilisée Orange/BNP Paribas, etc...</a></li>
                                             <li><a href="http://globalgamejam.org/2017/games/side-tricks-pedal-train" target="_blank">Global Game Jam 2017 - Side Tricks</a></li>
-                                            <li><a href="https://bit.ly/2Tda35b" target="_blank">Guild Up - j'ai participé au gameplay de ce serious Game utilisé comme plateforme d'e-learning par Orange/BNP Paribas, etc...</a></li>
                                         </ul>
-                                    </div> <!-- .cd-pricing-body -->
-                                    <footer class="cd-pricing-footer">
-                                        <a class="cd-select" href="#portfolio">Portfolio</a>
-                                    </footer>  <!-- .cd-pricing-footer -->
-                                </li>
 
                                 <li data-type="web" class="is-hidden">
 
