--- a/index.html
+++ b/index.html
@@ -260,7 +260,9 @@
                                             <li>-</li>
                                         </ul>
                                     </div> <!-- .cd-pricing-body -->
-								
+								  <footer class="cd-pricing-footer">
+                                        <a class="cd-select" href="#portfolio">Portfolio</a>
+                                    </footer>  <!-- .cd-pricing-footer -->
 
                                 <li data-type="web" class="is-hidden">
 								<header class="cd-pricing-header">
