Update portfolio images

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -191,7 +191,7 @@
 								Projet réalisé au sein de l'entreprise Pulpsoft, mon rôle était d'ajouter des fonctionnalités au gameplay et à l'UI.<br/>
 								<br/>
 								
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/43hlaGfbEM0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<p><iframe width="560" height="315" src="https://www.youtube.com/embed/43hlaGfbEM0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 								<p>Guild Up est une plateforme d'E-learning en ligne produite par Eden Quest et réalisée par Pulpsoft.<br/></p>
 								<img width="800" height="600" style="display = block; align=center; " src="img/guildUp.jpg"><br/>
 								<p>Cette plateforme est notamment utilisée et reconnue par Orange et BNP Paribas pour former leurs employés et entraîner un esprit d'entente et de coopération entre les utilisateurs.<br/></p>
@@ -285,7 +285,7 @@
 					<div class="project-content">
 						<div>
 							<p>
-								Divers projets en 3D réalisés avec Unity (de 5.X à 2019.X)
+								Divers projets en 3D et 2D réalisés avec Unity (de 5.X à 2019.X)
 							</p>
 							
 							<p>
