--- a/pages/projects.html
+++ b/pages/projects.html
@@ -77,29 +77,26 @@
 				<div class="project-wrapper">
 					<div class="project-image">
 						<div class="project-title">
-							<h2>Platform Switcher 3D</h2>
+							<h2>Cyborg Battle - jeu réalisé en C++ + SDL2.0</h2>
 						</div>
 					</div> <!-- .project-image -->
 
 					<div class="project-content">
 						<div>
 							<p>
-								<u>Type de Jeu :</u> Prototype de sidescroller et platformer 3D jouable à un joueur. <br/>
+								<u>Type de Jeu :</u> Hack'n slash en 2D <br/>
 								<br/>
-								<u>Moteur de Jeu :</u> Unreal Engine 4.4<br/>
+								<u>Moteur de Jeu :</u> moteur 2D perso <br/>
 								<br/>
-								<u>Langage de Programmation :</u> C++, et quelques BluePrints<br/>
+								<u>Langage de Programmation :</u> C++ & librairies SDL2.0<br/>
 								<br/>
-								Le but de ce prototype était de créer un template de jeu vue de profil (sidescroller), dans lequel le joueur peut se téléporter d'un plan à un autre (premier plan vers arrière plan et vice-versa) grâce à une capacité déclenchable avec la touche A du clavier. Il doit ainsi utiliser ce pouvoir de manière stratégique pour accéder à des endroits inaccessibles autrement et éviter des pièges posés sur son chemin.<br/>
+								<img width="800" height="600" style="display = block; align=center; " src="https://github.com/Batora07/HackNSlashCyborg/raw/master/cyborg_battle/img/grobEnemies.gif"></br>
+								Jeu réalisé en une semaine grâce aux cours et aux assets fournis par <a href="https://twitter.com//2HitMatt" target="_blank">Matthew Carr</a> <br/>
 								<br/>
-
-								Réalisé en un après-midi grâce aux cours de <u>John Bura</u>, fondateur du studio <u>Mammoth Interactive</u> et instructeur sur le site <u>Udemy</u>.
 							</p>
 
-							<p> Télécharger l'executable :  <a class="btn btn-success" href="http://www.mediafire.com/file/5nxlbmnhhis9ple/Platformer2D.zip" role="button" target="_blank">Executable</a> </p>
-							<p> Télécharger les scripts :  <a class="btn btn-info" href="http://www.mediafire.com/file/e9ut8d9832u1af9/scripts.zip" role="button" target="_blank">Code Source</a> </p> 
-							<p> Télécharger le projet Unreal Engine au complet: <a class="btn btn-primary" href="http://www.mediafire.com/file/e9ut8d9832u1af9/scripts.zip" role="button" target="_blank">Projet UE 4.4</a> </p>
-
+							<p> Télécharger l'installeur :  <a class="btn btn-success" href="https://bit.ly/2U2UoFC" role="button" target="_blank">Installeur</a> </p>
+							<p> Accéder au projet Github :  <a class="btn btn-info" href="https://github.com/Batora07/HackNSlashCyborg" role="button" target="_blank">Lien GitHub</a> </p> 
 							</p>
 						</div>
 					</div> <!-- .project-content -->
@@ -213,32 +210,32 @@
 				</div> <!-- .project-wrapper -->
 			</li>
 
-			<li class="right-face project-5">
+				<li class="right-face project-5">
 				<div class="project-wrapper">
 					<div class="project-image">
 						<div class="project-title">
-							<h2>Prototype de FPS</h2>
+							<h2>Platform Switcher 3D</h2>
 						</div>
 					</div> <!-- .project-image -->
 
 					<div class="project-content">
 						<div>
 							<p>
-								<u>Type de Jeu :</u> Prototype de First Person Shooter (FPS) avec vague d'ennemis infinis. <br/>
+								<u>Type de Jeu :</u> Prototype de sidescroller et platformer 3D jouable à un joueur. <br/>
 								<br/>
 								<u>Moteur de Jeu :</u> Unreal Engine 4.4<br/>
 								<br/>
 								<u>Langage de Programmation :</u> C++, et quelques BluePrints<br/>
 								<br/>
-								Le but de ce prototype était de créer un template de FPS, dans lequel le joueur peut tirer sur des ennemis tout en se déplaçant et augmenter son score. Les vagues d'ennemis sont de plus en plus nombreuses jusqu'à ce que le joueur se fasse inévitablement encercler. Il faut appuyer sur R pour recommencer.<br/>
+								Le but de ce prototype était de créer un template de jeu vue de profil (sidescroller), dans lequel le joueur peut se téléporter d'un plan à un autre (premier plan vers arrière plan et vice-versa) grâce à une capacité déclenchable avec la touche A du clavier. Il doit ainsi utiliser ce pouvoir de manière stratégique pour accéder à des endroits inaccessibles autrement et éviter des pièges posés sur son chemin.<br/>
 								<br/>
 
 								Réalisé en un après-midi grâce aux cours de <u>John Bura</u>, fondateur du studio <u>Mammoth Interactive</u> et instructeur sur le site <u>Udemy</u>.
 							</p>
 
-							<p> Télécharger l'executable :  <a class="btn btn-success" href="http://www.mediafire.com/file/wa9185pla4ff14p/FPSProto.zip" role="button" target="_blank">Executable</a> </p>
-							<p> Télécharger les scripts :  <a class="btn btn-info" href="http://www.mediafire.com/file/3cwlfy618a08bsb/sources.zip" role="button" target="_blank">Code Source</a> </p> 
-							<p> Télécharger le projet Unreal Engine au complet: <a class="btn btn-primary" href="http://www.mediafire.com/file/nzjpe94s4rce7zk/FPSShooter.zip" role="button" target="_blank">Projet UE 4.4</a> </p>
+							<p> Télécharger l'executable :  <a class="btn btn-success" href="http://www.mediafire.com/file/5nxlbmnhhis9ple/Platformer2D.zip" role="button" target="_blank">Executable</a> </p>
+							<p> Télécharger les scripts :  <a class="btn btn-info" href="http://www.mediafire.com/file/e9ut8d9832u1af9/scripts.zip" role="button" target="_blank">Code Source</a> </p> 
+							<p> Télécharger le projet Unreal Engine au complet: <a class="btn btn-primary" href="http://www.mediafire.com/file/e9ut8d9832u1af9/scripts.zip" role="button" target="_blank">Projet UE 4.4</a> </p>
 
 							</p>
 						</div>
@@ -247,7 +244,7 @@
 					<a href="#0" class="close-project">Close</a>
 				</div> <!-- .project-wrapper -->
 			</li>
-
+			
 			<li class="right-face project-6">
 				<div class="project-wrapper">
 					<div class="project-image">
@@ -387,19 +384,34 @@
 					<a href="#0" class="close-project">Close</a>
 				</div> <!-- .project-wrapper -->
 			</li>
-
+			
 			<li class="right-face project-8">
 				<div class="project-wrapper">
 					<div class="project-image">
 						<div class="project-title">
-							<h2>Autres</h2>
+							<h2>Prototype de FPS</h2>
 						</div>
 					</div> <!-- .project-image -->
 
 					<div class="project-content">
 						<div>
 							<p>
-								En cours...
+								<u>Type de Jeu :</u> Prototype de First Person Shooter (FPS) avec vague d'ennemis infinis. <br/>
+								<br/>
+								<u>Moteur de Jeu :</u> Unreal Engine 4.4<br/>
+								<br/>
+								<u>Langage de Programmation :</u> C++, et quelques BluePrints<br/>
+								<br/>
+								Le but de ce prototype était de créer un template de FPS, dans lequel le joueur peut tirer sur des ennemis tout en se déplaçant et augmenter son score. Les vagues d'ennemis sont de plus en plus nombreuses jusqu'à ce que le joueur se fasse inévitablement encercler. Il faut appuyer sur R pour recommencer.<br/>
+								<br/>
+
+								Réalisé en un après-midi grâce aux cours de <u>John Bura</u>, fondateur du studio <u>Mammoth Interactive</u> et instructeur sur le site <u>Udemy</u>.
+							</p>
+
+							<p> Télécharger l'executable :  <a class="btn btn-success" href="http://www.mediafire.com/file/wa9185pla4ff14p/FPSProto.zip" role="button" target="_blank">Executable</a> </p>
+							<p> Télécharger les scripts :  <a class="btn btn-info" href="http://www.mediafire.com/file/3cwlfy618a08bsb/sources.zip" role="button" target="_blank">Code Source</a> </p> 
+							<p> Télécharger le projet Unreal Engine au complet: <a class="btn btn-primary" href="http://www.mediafire.com/file/nzjpe94s4rce7zk/FPSShooter.zip" role="button" target="_blank">Projet UE 4.4</a> </p>
+
 							</p>
 						</div>
 					</div> <!-- .project-content -->
