--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             <li>
                                 <div class="ch-item ch-img-2">
                                     <div class="ch-info">
-                                        <h3>Projets Unreal</h3>
+                                        <h3>Projets C++ & Unreal</h3>
                                         <p><a href="pages/projects.html" target="_blank">by Marc Portet / Batora07</a></p>
                                     </div>
                                 </div>
