Update text and images

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -91,8 +91,20 @@
 								<u>Langage de Programmation :</u> C++ & librairies SDL2.0<br/>
 								<br/>
 								<img width="800" height="600" style="display = block; align=center; " src="https://github.com/Batora07/HackNSlashCyborg/raw/master/cyborg_battle/img/grobEnemies.gif"></br>
-								Jeu réalisé en une semaine grâce aux cours et aux assets fournis par <a href="https://twitter.com//2HitMatt" target="_blank">Matthew Carr</a> <br/>
+								Jeu réalisé en une semaine grâce aux cours et aux assets fournis par <a href="https://twitter.com/2HitMatt" target="_blank">Matthew Carr</a> <br/>
 								<br/>
+								<p> Le jeu possède deux types d'ennemis différents avec des compétences spécifiques ainsi que l'apparition d'un boss lorsque la 3ème vague de monstres est vaincue. La vie du boss est affichée et il dispose de 3 phases différentes qui se déclenchent selon son pourcentage de vie restante.</p>
+								<p>Liste des commandes :
+
+								Barre espace : Commencer à jouer / Rejouer
+								Touche "Echap" : Quitter le jeu
+								Touche "W" : Attaquer
+								Touche "X" : Eviter/Sprinter avec une frame d'invicibilité
+								Touche "Flèche du haut" : Se déplacer vers le haut
+								Touche "Flèche du bas" : Se déplacer vers le bas
+								Touche "Flèche droite" : Se déplacer à droite
+								Touche "Flèche gauche" : Se déplacer à gauche
+								</p>
 							</p>
 
 							<p> Télécharger l'installeur :  <a class="btn btn-success" href="https://bit.ly/2U2UoFC" role="button" target="_blank">Installeur</a> </p>
