--- a/index.html
+++ b/index.html
@@ -620,6 +620,9 @@
                             <li>
                                 <a href="https://github.com/Batora07" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-github-alt"></i></a>
                             </li>
+							<li>
+								<a href="https://www.instagram.com/batora07/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
+							</li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
