--- a/index.html
+++ b/index.html
@@ -71,12 +71,33 @@
 
     <!-- Header -->
     <header id="top" class="header">
-        <div class="text-vertical-center">
             <div class="col-lg-12">
                 <h1>Marc Portet</h1>
                 <h3>Game Programmer / UI / Graphist</h3>
             </div>
             <br>
+			<div class="text-vertical-center">
+			<h3>Réseaux sociaux & Github :</h3>
+			<ul class="list-inline">
+				<li>
+					<a href="https://batora07.blog/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-wordpress"></i></a>
+				</li>
+				<li>
+					<a href="https://twitter.com/Batora07" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
+				</li>
+				<li>
+					<a href="https://www.linkedin.com/in/marcportet" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a>
+				</li>
+				<li>
+					<a href="https://github.com/Batora07" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-github-alt"></i></a>
+				</li>
+				<li>
+					<a href="https://www.instagram.com/batora07/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
+				</li>
+			</ul>
+		</div>
+		</br>
+		</br>
             <a href="#about" class="btn btn-dark btn-lg">En savoir plus sur moi</a>
         </div>
     </header>
