--- a/index.html
+++ b/index.html
@@ -72,8 +72,34 @@
     <!-- Header -->
     <header id="top" class="header">
             <div class="col-lg-12">
-                <h1>Marc Portet</h1>
-                <h3>Game Programmer / UI / Graphist</h3>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<div style="border-radius: 0; color: #fff; background-color: rgba(0,0,0,0.4)">
+					<h1>Marc Portet</h1>
+					<h3>Game Programmer / UI / Graphist</h3>
+				</div>
             </div>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">En savoir plus sur moi</a>			
