--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,6 +14,8 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
+	  <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 	<title>Batora07 Travaux - Projets</title>
 </head>
