--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Portfolio et CV de Marc Portet / Batora07, gameplay programmer">
+    <meta name="author" content="Marc Portet/Batora07">
     <link href="img/favicon.png" rel="icon">
 
     <title>Marc Portet - Game Programmer</title>
