Update project file

--- a/index.html
+++ b/index.html
@@ -77,25 +77,6 @@
 				<br>
 				<br>
 				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
 				<div style="border-radius: 0; color: #fff; background-color: rgba(0,0,0,0.4)">
 					<h1>Marc Portet</h1>
 					<h3>Game Programmer / UI / Graphist</h3>
@@ -441,7 +422,7 @@
                                 <div class="ch-item ch-img-1">
                                     <div class="ch-info">
                                         <h3>Projets Unity</h3>
-                                        <p><a href="pages/projects.html" target="_blank">by Marc Portet / Batora07</a></p>
+                                        <p><a href="pages/projects.html">by Marc Portet / Batora07</a></p>
                                     </div>
                                 </div>
                             </li>
@@ -449,7 +430,7 @@
                                 <div class="ch-item ch-img-2">
                                     <div class="ch-info">
                                         <h3>Projets C++ & Unreal</h3>
-                                        <p><a href="pages/projects.html" target="_blank">by Marc Portet / Batora07</a></p>
+                                        <p><a href="pages/projects.html">by Marc Portet / Batora07</a></p>
                                     </div>
                                 </div>
                             </li>
@@ -457,14 +438,14 @@
                                 <div class="ch-item ch-img-4">
                                     <div class="ch-info">
                                         <h3>Autres Projets</h3>
-                                        <p><a href="pages/projects.html" target="_blank">by Marc Portet / Batora07</a></p>
+                                        <p><a href="pages/projects.html">by Marc Portet / Batora07</a></p>
                                     </div>
                                 </div>
                             </li>
                         </ul>
                     </div>
                     <!-- /.row (nested) -->
-                    <a href="pages/projects.html" class="btn btn-dark" target="_blank">Voir tous les projets</a>
+                    <a href="pages/projects.html" class="btn btn-dark">Voir tous les projets</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
