too bad li tag don't work

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -105,46 +105,46 @@
 							<p> Page GitHub des scripts :  <a class="btn btn-info" href="https://github.com/Batora07/ScriptsRPG3DProto" role="button" target="_blank">Page Github des scripts</a> </p> 
 							</br>
 							<p>Ci-après les features de gameplay que je souhaite intégrer à ce projet et celles déjà disponibles ou en cours d'implémentation :</br></p>
-							<p>		
-								TODO LIST :</br></p>
+							
+								<p>TODO LIST :</br></p>
 									<ul>
-										<p><li>[Gameplay] Créer et gérer l'histoire à partir de scripts (pour faciliter la localisation).</li></p>
-										<p><li>[Gameplay] Ajouter un système de quêtes.</li></p>
-										<p><li>[UI] Localisation (csv)</li></p>
-										<p><li>[FX] Ajouter des effets visuels par shaders/système de particules.</li></p>
-										<p><li>[FX] Améliorer les VFX (système de particules)</li></p>
-										<p><li>[Animation] Affiner/Améliorer les animations des personnages</li></p>
-										<p><li>[Gameplay] Affiner/Améliorer les combats (plusieurs types d'attaques pour les ennemis, équilibrer les dégâts, etc...)</li></p>
-										<p><li>[Gameplay & UI] Ajouter des cinématiques avec "cinémachine" et créer des icônes de personnages/Portraits pour les intéractions avec les PNJ</li></p>
-										<p><li>[Gameplay] Créer un embranchement scénaristique pour chaque personnage.</li></p>
-										<p><li>[Gameplay] Créer des intéractions avec les PNJ et permettre au joueur d'acheter/faire des transactions avec les PNJ</li></p>
-										<p><li>[Gameplay] Permettre au joueur d'utiliser des objets de soins</li></p>
-										<p><li>[Gameplay] Gérer les compétences (skills) et skill points</li></p>
-										<p><li>[Gameplay] Ajouter un système de journal/événements qui contient les actions faites par le joueur et ses objectifs.</li></p>
-										<p><li>[Gameplay] Ajouter une carte (map) et des intéractions (ajout de marqueurs, repérer les lieux d'importance etc...)</li></p>
-										<p><li>[Gameplay] Ajouter des notifications / onboarding / didacticiels / système de succès (achievements)</li></p>
-										<p><li>[System] Sauvegarder / charger l'état des niveaux (nombres d'ennemis restants, quêtes effectuées, etc...)</li></p>
+										<p>-[Gameplay] Créer et gérer l'histoire à partir de scripts (pour faciliter la localisation).</p>
+										<p>-[Gameplay] Ajouter un système de quêtes.</p>
+										<p>-[UI] Localisation (csv)</p>
+										<p>-[FX] Ajouter des effets visuels par shaders/système de particules.</p>
+										<p>-[FX] Améliorer les VFX (système de particules)</p>
+										<p>-[Animation] Affiner/Améliorer les animations des personnages</p>
+										<p>-[Gameplay] Affiner/Améliorer les combats (plusieurs types d'attaques pour les ennemis, équilibrer les dégâts, etc...)</p>
+										<p>-[Gameplay & UI] Ajouter des cinématiques avec "cinémachine" et créer des icônes de personnages/Portraits pour les intéractions avec les PNJ</p>
+										<p>-[Gameplay] Créer un embranchement scénaristique pour chaque personnage.</p>
+										<p>-[Gameplay] Créer des intéractions avec les PNJ et permettre au joueur d'acheter/faire des transactions avec les PNJ</p>
+										<p>-[Gameplay] Permettre au joueur d'utiliser des objets de soins</p>
+										<p>-[Gameplay] Gérer les compétences (skills) et skill points</p>
+										<p>-[Gameplay] Ajouter un système de journal/événements qui contient les actions faites par le joueur et ses objectifs.</p>
+										<p>-[Gameplay] Ajouter une carte (map) et des intéractions (ajout de marqueurs, repérer les lieux d'importance etc...)</p>
+										<p>-[Gameplay] Ajouter des notifications / onboarding / didacticiels / système de succès (achievements)</p>
+										<p>-[System] Sauvegarder / charger l'état des niveaux (nombres d'ennemis restants, quêtes effectuées, etc...)</p>
 									</ul>
 									</br>
 									<p>WIP</br></p>
 									<ul>
-										<p><li>[Gameplay] Gérer l'inventaire (Json)</li></p>
-										<p><li>[UI] Ajouter un système de switch de barres de vie avec la touche "tab"</li></p>
+										<p>-[Gameplay] Gérer l'inventaire (Json)</p>
+										<p>-[UI] Ajouter un système de switch de barres de vie avec la touche "tab"</p>
 									</ul>
 									</br>
 									<p>DONE :</br></p>
 									<ul>
-										<p><li><strike>[Gameplay] Sélectionner un personnage et lancer une partie avec</strike></li></p>
-										<p><li><strike>[Gameplay] 3 personnages & animations + différentes compétences disponibles</strike></li></p>
-										<p><li><strike>[Gameplay] Différents mondes à visiter et ennemis à combattre</strike></li></p>
-										<p><li><strike>[IA] Une ville avec des PNJ avec une IA basique</strike></li></p>
-										<p><li><strike>[Gameplay] Différentes armes pour le joueur</strike></li></p>
-										<p><li><strike>[System] Sauvegarde de l'état d'un joueur dans un fichier et charger ce fichier</strike></li></p>
-										<p><li><strike>[Sound] Ajouter des sons pour le personnage joueur, les ennemis, des SFX et de la musique + ambiance à chaque niveaux</strike></li></p>
-										<p><li><strike>[UI] Ajouter des barres de vie aux ennemis + des cercles de sélection aux pieds des ennemis/joueur</strike></li></p>
+										<p><strike>-[Gameplay] Sélectionner un personnage et lancer une partie avec</strike></p>
+										<p><strike>-[Gameplay] 3 personnages & animations + différentes compétences disponibles</strike></p>
+										<p><strike>-[Gameplay] Différents mondes à visiter et ennemis à combattre</strike></p>
+										<p><strike>-[IA] Une ville avec des PNJ avec une IA basique</strike></p>
+										<p><strike>-[Gameplay] Différentes armes pour le joueur</strike></p>
+										<p><strike>-[System] Sauvegarde de l'état d'un joueur dans un fichier et charger ce fichier</strike></p>
+										<p><strike>-[Sound] Ajouter des sons pour le personnage joueur, les ennemis, des SFX et de la musique + ambiance à chaque niveaux</strike></p>
+										<p><strike>-[UI] Ajouter des barres de vie aux ennemis + des cercles de sélection aux pieds des ennemis/joueur</strike></p>
 									</ul>
 								</br>
-						</p>
+					
 						</div>
 					</div> <!-- .project-content -->
 
