Add VFX fight to index.html

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
     <!-- About -->
     <section id="about" class="about">
         <div class="container">
+			<div class="row text-center">
+				<video controls>
+					 <source src="pages/img/rpgProto/vfxFight.mp4" type="video/mp4" />
+					 Vidéo présentant un combat de mon projet de RPG
+				</video>
+			</div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p>De formation Master Informatique spécialité Image (Bac+4) à Lyon, et joueur actif depuis ma plus tendre enfance. Je suis passionné par la programmation et le graphisme et réalise aujourd'hui des prototypes de jeux pour apprendre à utiliser les moteurs les plus appréciés du secteur vidéoludique (Unity/Unreal Engine 4) et à développer pour les langages C# et C++.</p>
