--- a/index.html
+++ b/index.html
@@ -468,13 +468,45 @@
                     <h2>Parcours</h2>
                     <hr class="small">
                     <br/>
-                    <a href="cv/CV_2019.pdf" class="btn btn-dark" target="_blank">C.V en version PDF</a>
+                    <a href="cv/PORTETMarc_cv2020.pdf" class="btn btn-dark" target="_blank">C.V en version PDF</a>
                 </div>
             </div>
             <div class="container">
                 <div class="timeline-container" id="cd-timeline">
 
 				 <section class="cd-container">
+						<!-- Intégration CITYZEN -->
+                        <div class="cd-timeline-block">
+                            <div class="cd-timeline-img cd-picture">
+                                <img src="img/GPS.png" alt="GPS">
+                            </div> <!-- cd-timeline-img -->
+
+                            <div class="cd-timeline-content">
+                                <h3>CityZen - filiale du groupe UP</h3>
+                                <p>Développeur C# .NET</p>
+								<p>Même mission, embauche suite à ma pré-embauche avec Guarani lors de ma période de prestation.</p>
+                                <p>  - AtHome : <a href="https://solutions.up-france.fr/programmes-publics-sociaux/gestion-activite/logiciel-hospitalisation-domicile" target="_blank">AtHome</a></p>
+								<a href="https://solutions.up-france.fr/programmes-publics-sociaux/arcan" target="_blank" class="cd-read-more">Site Internet de CityZen</a>
+                                <span class="cd-date">Janvier 2020 - Avril 2020<br/>Bron</span>
+                            </div> <!-- cd-timeline-content -->
+                        </div> <!-- cd-timeline-block -->
+				 
+						<!-- Intégration GUARANI -->
+                        <div class="cd-timeline-block">
+                            <div class="cd-timeline-img cd-picture">
+                                <img src="img/GPS.png" alt="GPS">
+                            </div> <!-- cd-timeline-img -->
+
+                            <div class="cd-timeline-content">
+                                <h3>GUARANÍ</h3>
+                                <p>Prestataire / Développeur C# .NET</p>
+								<p>Prestataire en mission pour GUARANÍ en pré-embauche chez Groupe UP (Chèque Déjeuner / Cadhoc / Chèque Domicile) pour du développement C#.Net</p>
+								<p>pour une solution informatique pour de l'HAD (Hospitalisation à Domicile).</p>
+								<a href="https://www.guarani.fr/" target="_blank" class="cd-read-more">Site Internet de GUARANÍ</a></p>
+                                <span class="cd-date">Juin 2019 - Décembre 2019<br/>Lyon</span>
+                            </div> <!-- cd-timeline-content -->
+                        </div> <!-- cd-timeline-block -->
+				 
                         <!-- Intégration PULPSOFT -->
                        <div class="cd-timeline-block">
                             <div class="cd-timeline-img cd-picture">
@@ -667,7 +699,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; 2016-2019 - Batora07 - Marc PORTET
+                        Copyright &copy; 2016-2020 - Batora07 - Marc PORTET
                     </div>
                 </div>
             </div>
