--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     </section>
 
     <!-- Callout -->
-    <aside class="callout">
+    <aside class="callout" style="width:100%;height:auto">
         <div class="text-vertical-center">
             <h1>Portfolio & C.V.</h1>
         </div>
