Remove error in console + center youtube videos

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
     </section>
 
     <!-- Callout -->
-    <aside class="callout" style="width:100%;height:auto">
+    <aside class="callout" style="width:100%;height:500px">
         <div class="text-vertical-center">
             <h1>Portfolio & C.V.</h1>
         </div>
@@ -659,7 +659,7 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
+                    <div id="contact" class="footer-col col-md-4">
                         <h3>Coordonnées</h3>
                         <p>
                             <i class="fa fa-envelope-o"></i> Mail : <a href="mailto:marc.portet.info@gmail.com">marc.portet.info@gmail.com</a><br/>
@@ -791,7 +791,7 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-1.11.0.min.js"></script>
-    <script src="js/jquery-3.0.0.min.js"></script>
+    <!-- <script src="pages/js/jquery-3.0.0.min.js"></script> -->
     <script src="js/main.js"></script>
 
     <script src="js/bootstrap.min.js"></script>
