--- a/pages/projects.html
+++ b/pages/projects.html
@@ -335,13 +335,14 @@
 									<iframe class="resp-iframe" src="https://www.youtube.com/embed/sc168S6Uqhs" frameborder="0" allowfullscreen></iframe>
 								</div>
 								<br>
-								<u>Synopsis:</u><br>
-
-								Trois gangsters aussi timbrés les uns que les autres, exécutent un flic un peu trop curieux. On distingue "Le Cerveau", il est malin, il est fourbe, on ne sait jamais où il va frapper. On trouve à ses côtés "La Gâchette", la violence fait partie de son quotidien. Et pour finir, "Le Fossoyeur", tout est dit dans le nom... La réaction des forces de l'ordre ne se fait pas attendre, une descente dans un bar pour mettre fin à ce carnage.
+								<p><u>Synopsis:</u></p><br>
+								<p>
+								Trois gangsters aussi timbrés les uns que les autres, exécutent un flic un peu trop curieux. On distingue "Le Cerveau", il est malin, il est fourbe, on ne sait jamais où il va frapper. On trouve à ses côtés "La Gâchette", la violence fait partie de son quotidien. Et pour finir, "Le Fossoyeur", tout est dit dans le nom... La réaction des forces de l'ordre ne se fait pas attendre, une descente dans un bar pour mettre fin à ce carnage.</p>
 								<br />
 								<br />
+								<p>
 								Court-métrage réalisé dans le cadre du cours de Gestion de Projet pour le DUT Métiers du Multimédia et de l'Internet, à Vichy. Diffusé au <a href="http://www.etoile-cinemas.com/palace/" target="_blank">cinéma Etoile de Vichy</a> lors du festival du Court Métrage de Vichy en 2014. 
-								Ecrit, tourné et monté sur 3 mois pendant nos temps libre.
+								Ecrit, tourné et monté sur 3 mois pendant nos temps libre.</p>
 								<br>
 								<br>
 								</p>
@@ -574,6 +575,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 <script>
 	if( !window.jQuery ) document.write('<script src="js/jquery-3.0.0.min.js"><\/script>');
+	response.setHeader("Set-Cookie", "HttpOnly;Secure;SameSite=Strict");
 </script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
